@@ -19,14 +19,13 @@ const VirtualizedList = props => {
 
   const { outerRef, innerRef, items, scrollToItem } = useVirtual({
     itemCount: entries.length,
-    resetScroll: true,
-    scrollDuration: 250
+    resetScroll: true
   })
 
   React.useEffect(() => {
     if (scroll === 'none') return
     if (focusIndex === -1) return
-    scrollToItem({ index: focusIndex, align: 'auto', smooth: true })
+    scrollToItem({ index: focusIndex, align: 'auto', smooth: false })
   }, [scrollToItem, focusIndex, scroll])
 
   const card = ({ index, measureRef }) => {
